    - AuthnCtx comparison or matching
    - Proxy IdP AuthnCtx, RequesterID mapping

zxid-1.01:: 18.6.2011
    - Added to zxidhlo a possibility of giving CONF using -D at compile time
    - Fixed long int argument to %d warnings (happened with x86_64 architecture build)
    - Fixed null pointer check in zxid_extract_body()

zxid-1.0:: 31.5.2011
    - Promoted to 1.0 status
zxid-0.83:: 11.3.2011
    - Fixed ordering of EPRs returned by zxid_get_epr() to always to be same as with zxid_find_epr().
    - Made private key reading more robust by tolerating omission of RSA or DSA designation

zxid-0.82:: 10.3.2011
    - Added Proxy IdP support
    - Fixed supplying Destination attribute in AuthnReq, restoring Shib compatibility
    - Fixed artifact binding on SP
    - Fixed XML crash due to malformed close tag
    - Tinkered with order of SOAP headers to silence some warnings

zxid-0.81:: 8.3.2011
    - Eliminate empty valued and duplicate attributes from XACML requests
    - Fixed return value of zxid_az() family to be null upon deny.

zxid-0.80:: 2.3.2011
    - Fixed out of memory in zxidwsc.c caused by malformed fault input.

zxid-0.79:: 1.3.2011
    - Enhanced zxidhlo to show attributes
    - Added ability comment out AAMAP directives
    - Fixed timegm bug

zxid-0.78:: 23.2.2011
    - Fixed processing (by ignoring it) of whitespace in metadata (and elsewhere)
    - Improved fault handing in zxid_call()
    - Fixed segv caused by other side returning illegal XML in zxid_call()

zxid-0.77:: 16.2.2011
    - upgraded for php-5.3 support (patch from Jeroen Asselman)
    - Improved -at handling in zxpasswd
    - curl_easy_reset() patch from Jeroen Asselman (fixes crash on Win32)
    - Applied zxid_saml2_map_nid_fmt() patch by Cal Heldenbrand
    - Robustified error processing in cases where encryption certificate is missing
    - Fixed NAMEID_ENC=0 missing a NameID element (TAS3 bug #493, found by Stijn)