@@ -1,1 +1,1 @@
-$Id: 1.0-2-ge03c606 20110618-231837 sampo@ $
+$Id: 1.0-3-g7505688 20110620-191014 sampo@ $
