@@ -73,6 +73,7 @@ zxid-1.01:: 18.6.2011
     - Added to zxidhlo a possibility of giving CONF using -D at compile time
     - Fixed long int argument to %d warnings (happened with x86_64 architecture build)
     - Fixed null pointer check in zxid_extract_body()
+    - improved error reporting to show cwd in vopen_fd_from_path()
 
 zxid-1.0:: 31.5.2011
     - Promoted to 1.0 status
